; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/common_components/protocol_examples_common/extr_stdin_out.c_example_configure_stdin_stdout.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/common_components/protocol_examples_common/extr_stdin_out.c_example_configure_stdin_stdout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin = common dso_local global i32 0, align 4
@_IONBF = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@CONFIG_ESP_CONSOLE_UART_NUM = common dso_local global i64 0, align 8
@ESP_LINE_ENDINGS_CR = common dso_local global i32 0, align 4
@ESP_LINE_ENDINGS_CRLF = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @example_configure_stdin_stdout() #0 {
  %1 = load i32, i32* @stdin, align 4
  %2 = load i32, i32* @_IONBF, align 4
  %3 = call i32 @setvbuf(i32 %1, i32* null, i32 %2, i32 0)
  %4 = load i32, i32* @stdout, align 4
  %5 = load i32, i32* @_IONBF, align 4
  %6 = call i32 @setvbuf(i32 %4, i32* null, i32 %5, i32 0)
  %7 = load i64, i64* @CONFIG_ESP_CONSOLE_UART_NUM, align 8
  %8 = trunc i64 %7 to i32
  %9 = call i32 @uart_driver_install(i32 %8, i32 256, i32 0, i32 0, i32* null, i32 0)
  %10 = call i32 @ESP_ERROR_CHECK(i32 %9)
  %11 = load i64, i64* @CONFIG_ESP_CONSOLE_UART_NUM, align 8
  %12 = call i32 @esp_vfs_dev_uart_use_driver(i64 %11)
  %13 = load i32, i32* @ESP_LINE_ENDINGS_CR, align 4
  %14 = call i32 @esp_vfs_dev_uart_set_rx_line_endings(i32 %13)
  %15 = load i32, i32* @ESP_LINE_ENDINGS_CRLF, align 4
  %16 = call i32 @esp_vfs_dev_uart_set_tx_line_endings(i32 %15)
  %17 = load i32, i32* @ESP_OK, align 4
  ret i32 %17
}

declare dso_local i32 @setvbuf(i32, i32*, i32, i32) #1

declare dso_local i32 @ESP_ERROR_CHECK(i32) #1

declare dso_local i32 @uart_driver_install(i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @esp_vfs_dev_uart_use_driver(i64) #1

declare dso_local i32 @esp_vfs_dev_uart_set_rx_line_endings(i32) #1

declare dso_local i32 @esp_vfs_dev_uart_set_tx_line_endings(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
